# ExtendingAnsibleWithPython

./: CNAME  README.md
Inventories/: AnsibleInventoryPlugins.md  BeyondStaticInventoriesInAnsible.md  MANIFEST.in  README.md  ScriptsAndDynamicInventoriesInAnsible.md  home_nmap_inventory.yaml  nmap_inventory.yaml  requirements.txt  setup.cfg
Inventories/inventories/: config.py  nmap.py  nmap_plugin.py
Inventories/plugins/: README.md
Inventories/plugins/inventory/: README.md  nmap_plugin.py
Inventories/scripts/: nmap_inventory.py
Inventories/test/: home_scan.xml  nmap_plugin.yaml  nmap_plugin_inventory.yaml  test_nmap.py
