[metadata]
name = ansible_nmap_inventories
version = 0.0.1
author = Jose Vicente Nunez Zuleta
Author-email = kodegeek.com@protonmail.com
License = Apache 2.0
Summary = Example how to write dynamic inventories with Ansible and Nmap
Home-page = https://github.com/josevnz/ExtendingAnsibleWithPython

[options]
packages = inventories
setup_requires =
    setuptools>=60.2.0
    wheel>=0.37.1
    build>=0.7.0
    pip-audit==2.0.0
install_requires =
    importlib; python_version == "3.9"
scripts =
    scripts/nmap_inventory.py